Bug 217434 - nsImapMockChannel supports Suspend and Resume. r=BenC DONTBUILD

Per suggestions at https://bugzilla.mozilla.org/show_bug.cgi?id=217434#c5:
  - nsImapMockChannel::Suspend sets mSuspended

  - nsImapMockChannel::{Resume,Cancel} unset mSuspended and notify the
    associated nsImapProtocol thread that waits on mSuspendedMonitor

  - nsImapProtocol::CreateNewLineFromSocket is blocked until the
    associated m_mockChannel is resumed (or cancelled)

Differential Revision: https://phabricator.services.mozilla.com/D92343

--HG--
extra : rebase_source : 5537abe90b07d2f2af5525552193911debfeea15
extra : amend_source : 68697aea2e1f0369c0d277810830693e1e4bb2f2