mailnews/imap/src/nsImapProtocol.cpp
@@ -4745,6 +4745,22 @@ char* nsImapProtocol::CreateNewLineFromSocket() {
   // blocked on gets notified. When that happens, the imap thread
   // will stay blocked.
   nsCOMPtr<nsIInputStream> kungFuGrip = m_inputStream;
+
+  if (m_mockChannel) {
+    nsImapMockChannel* imapChannel =
+      static_cast<nsImapMockChannel*>(m_mockChannel.get());
+
+    MOZ_LOG(IMAP, LogLevel::Debug, ("Waiting until [imapChannel=%p] is resumed.", imapChannel));
+
+    mozilla::MonitorAutoLock lock(imapChannel->mSuspendedMonitor);
+
+    while (imapChannel->mSuspended) {
+      lock.Wait();
+    }
+
+    MOZ_LOG(IMAP, LogLevel::Debug, ("Done waiting, [imapChannel=%p] has been resumed.", imapChannel));
+  }
+
   do {
     newLine = m_inputStreamBuffer->ReadNextLine(m_inputStream, numBytesInLine,
                                                 needMoreData, &rv);
@@ -8648,7 +8664,7 @@ NS_IMPL_ISUPPORTS_INHERITED(nsImapMockChannel, nsHashPropertyBag,
                             nsICacheEntryOpenCallback, nsITransportEventSink,
                             nsISupportsWeakReference)
 
-nsImapMockChannel::nsImapMockChannel() {
+nsImapMockChannel::nsImapMockChannel() : mSuspendedMonitor("nsImapMockChannel"), mSuspended(false) {
   m_cancelStatus = NS_OK;
   mLoadFlags = 0;
   mChannelClosed = false;
@@ -9668,6 +9684,10 @@ NS_IMETHODIMP nsImapMockChannel::Cancel(nsresult status) {
     DoomCacheEntry(mailnewsUrl);
   }
 
+  // The associated ImapProtocol thread must be unblocked before being killed.
+  // Otherwise, it will be deadlocked.
+  ResumeAndNotifyOne();
+
   // Required for killing ImapProtocol thread
   if (imapProtocol) imapProtocol->TellThreadToDie(false);
 
@@ -9681,14 +9701,54 @@ NS_IMETHODIMP nsImapMockChannel::GetCanceled(bool* aCanceled) {
   return NS_OK;
 }
 
+/**
+  * Suspends the current request.  This may have the effect of closing
+  * any underlying transport (in order to free up resources), although
+  * any open streams remain logically opened and will continue delivering
+  * data when the transport is resumed.
+  *
+  * Calling cancel() on a suspended request must not send any
+  * notifications (such as onstopRequest) until the request is resumed.
+  *
+  * NOTE: some implementations are unable to immediately suspend, and
+  * may continue to deliver events already posted to an event queue. In
+  * general, callers should be capable of handling events even after
+  * suspending a request.
+  */
 NS_IMETHODIMP nsImapMockChannel::Suspend() {
-  MOZ_ASSERT_UNREACHABLE("nsImapMockChannel::Suspend");
-  return NS_ERROR_NOT_IMPLEMENTED;
+  MOZ_LOG(IMAP, LogLevel::Debug, ("Suspending [this=%p].", this));
+
+  mozilla::MonitorAutoLock lock(mSuspendedMonitor);
+  NS_ENSURE_TRUE(!mSuspended, NS_ERROR_NOT_AVAILABLE);
+  mSuspended = true;
+
+  MOZ_LOG(IMAP, LogLevel::Debug, ("Suspended [this=%p].", this));
+
+  return NS_OK;
 }
 
+/**
+  * Resumes the current request.  This may have the effect of re-opening
+  * any underlying transport and will resume the delivery of data to
+  * any open streams.
+  */
 NS_IMETHODIMP nsImapMockChannel::Resume() {
-  MOZ_ASSERT_UNREACHABLE("nsImapMockChannel::Resume");
-  return NS_ERROR_NOT_IMPLEMENTED;
+  MOZ_LOG(IMAP, LogLevel::Debug, ("Resuming [this=%p].", this));
+
+  nsresult rv = ResumeAndNotifyOne();
+
+  MOZ_LOG(IMAP, LogLevel::Debug, ("Resumed [this=%p].", this));
+
+  return rv;
+}
+
+nsresult nsImapMockChannel::ResumeAndNotifyOne() {
+  mozilla::MonitorAutoLock lock(mSuspendedMonitor);
+  NS_ENSURE_TRUE(mSuspended, NS_ERROR_NOT_AVAILABLE);
+  mSuspended = false;
+  lock.Notify();
+
+  return NS_OK;
 }
 
 NS_IMETHODIMP
